--- a/Fireworks.html
+++ b/Fireworks.html
@@ -7,15 +7,15 @@
 <link rel="stylesheet" href="fireworks.css">
 <title>Fireworks Animation</title>
 </head>
-<body>
+<body onload="explosion()">
 
 <h1>Happy 4th of July!</h1>
-<h2>firworks disply using jQuery and CSS<h2>
+<h2>firworks disply using jQuery and CSS</h2>
+<div class="frame" >
+<div id="photo" class="container" >
 
-<div id="photo" class="container" onload="explosion()">
-<div class="base-particle">
+
 </div>
-
 </div>
 
 </body>
